
syntax = "proto3";
option go_package = "github.com/cuemby/ccp-sdk/gen/go/accounts/v1alpha1/countries";
package accounts.v1alpha1.countries.v1;

/*  

    Requests Countries

*/

message City {
    uint32 id = 1;
    string name = 2;
    string latitude = 3;
    string longitude = 4;
}

message State {
    uint32 id = 1;
    string name = 2;
    repeated City cities = 3;
}

message CountryList {
    uint32 id = 1;
    string name = 2;
    string code = 3;
    string phone_code = 4;
    string emoji = 5;
}

message ListCountriesRequest {

}

message ListCountriesResponse {
    repeated CountryList countries = 1;
}

message GetOneCountryRequest {
     uint32 country_id = 1;
     string name = 2;
}

message GetOneCountryResponse {
    uint32 id = 1;
    string name = 2;
    string code = 3;
    string phone_code = 4;
    string emoji = 5;
    repeated State states = 6;
}
