
syntax = "proto3";
option go_package = "github.com/cuemby/ccp-sdk/gen/go/accounts/v1alpha1/countries";
import "accounts/v1alpha1/countries/countries.proto";
package accounts.v1alpha1.countries.v1;
  
service CountriesService {
    rpc ListCountries(ListCountriesRequest) returns (ListCountriesResponse);
    rpc GetOneCountry(GetOneCountryRequest) returns (GetOneCountryResponse);
}
